Fix header alignment by adding media query

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -50,5 +50,7 @@ $tablet: 37.5em;
 $large-tablet: 48em;
 // 1024px  -- laptops
 $desktop: 64em;
+// 1200px -- med-screen
+$med-screen: 75em;
 // 1440px -- large screen
 $large-screen: 90em;
